--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Second Repo</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1> My second Repo </h1>
     <p> Bamm! I did it !</p>
     <p>How exciting it is ! Huhu!!!!!!</p>
+    <img src="img/art1.jpg" alt="butterfly">
+    <img src="img/art2.jpg" alt="bon biral">
 </body>
 </html>
