--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <p>How exciting it is ! Huhu!!!!!!</p>
     <img src="img/art1.jpg" alt="butterfly">
     <img src="img/art2.jpg" alt="bon biral">
+    <img src="img/anime.jpg" alt="anime character">
 </body>
 </html>
