--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@
     <img src="img/art1.jpg" alt="butterfly">
     <img src="img/art2.jpg" alt="bon biral">
     <img src="img/anime.jpg" alt="anime character">
+    <div>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At quod quam officiis nesciunt deleniti quidem consectetur molestiae reprehenderit aperiam repellendus.</p>
+    </div>
 </body>
 </html>
